# rurima

./: .gitmodules  aarch64-android-api30.txt  meson.build  meson_options.txt
.github/workflows/: code-test.yml  sync.yml
src/: meson.build
